# fds

./: .gitignore  CMakeLists.txt  FdsVerifyInstaller.wxs  dev.ps1  env.ps1  justfile  run_vv_cases.sh  run_vv_comparison.sh
.circleci/: config.yml
.github/workflows/: cmake-release.yml  cmake.yml  linux.yml  osx.yml  windows.yml
FDS_Source/: fire.f90  json.f90  velo.f90
Manuals/: install_dnf_deps.sh
Source/: imkl.f90  json.f90  main.f90  pres.f90  read.f90
Tests/: CMakeLists.txt  get_test_data.ps1  get_test_data.sh
Utilities/Scripts/: qfds.sh  qfds_simple.sh  qfds_simple_nist.sh  runsmv_simple.sh
Verification/: CMakeLists.txt  FDS_Cases.sh
